--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-get-random-values": "^2.0.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
     "react-native-image-picker": "^8.2.1",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
